@@ -79,6 +79,8 @@ Hbase Change Log
    HBASE-632   HTable.getMetadata is very inefficient
    HBASE-671   New UI page displaying all regions in a table should be sorted
    HBASE-672   Sort regions in the regionserver UI
+   HBASE-677   Make HTable, HRegion, HRegionServer, HStore, and HColumnDescriptor
+               subclassable (Clint Morgan via Stack)
 
   NEW FEATURES
    HBASE-47    Option to set TTL for columns in hbase
